fixed xs footer spacing; closes #53

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -52,7 +52,7 @@ body {
  bottom: 0;
  left: 0;
  width: 100%;
- height: 90px;
+ min-height: 90px;
  background: #FFF0B9;
  border-top: 1px solid #090909;
 }
@@ -116,7 +116,7 @@ body {
 #main-container.container {
   background-color: #f4eede;
   border-radius: 15px;
-  padding: 20px;
+  padding: 20px 20px 90px 20px;
 }
 
 .facet_limit-active .panel-heading .panel-title a {
